<resources>
    <string name="app_name">KidsLauncher</string>
    <string name="swipe">Swipe</string>
    <string name="wiser_plus">Wiser PLUS</string>
    <string name="header_button_save">Save</string>
    <string name="header_button_close">Close</string>
    <string name="set_default_launcher_tip_title">A Wiser Tip</string>
    <string name="button_ok_got_it">OK Got it</string>
    <string name="set_default_launcher_tip">To Maximize your Wiser experience, please select Wiser and \'Always\' in the upcoming screen</string>
    <string name="google_login">Login to Google</string>
    <string name="dialog_google_desc">Please choose your email address that you want for Kid</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="internet_not_found">No Internet, We\'re having trouble getting data right now.</string>
    <string name="alert_connection_title">No network connection available</string>
    <string name="search">Search</string>
    <string name="search_contact_tip">Start typing to \nsearch for contacts</string>
    <string name="select_a_favorite_contact">Select a favorite contact</string>
    <string name="loading">Loading...</string>
    <string name="tool_tip_image">Tap on the image to change</string>

    <!-- Header buttons -->
    <string name="header_button_back">Back</string>
    <string name="header_button_done">Done</string>
    <string name="header_button_edit">Edit</string>
    <string name="header_button_cancel">Cancel</string>
    <string name="action_button_delete">Delete</string>
    <string name="header_button_new_contact">New Contact</string>
    <string name="remove_slides">Remove Slide</string>
    <string name="dialer">Dialer</string>
    <string name="call_history">Call History</string>

    <!-- Home slide items -->
    <string name="home_item_contacts">Contacts</string>
    <string name="home_item_dialer">Dialer</string>
    <string name="home_item_messaging">Messaging</string>
    <string name="home_item_camera">Camera</string>
    <string name="home_item_gallery">Gallery</string>
    <string name="home_item_applications">Applications</string>
    <string name="home_title_clock">Clock</string>

    <!-- People area -->
    <string name="contact_first_name_label">First name</string>
    <string name="contact_last_name_label">Last name</string>
    <string name="contact_mobile_number_label">Mobile number</string>
    <string name="contact_home_number_label">Home number</string>
    <string name="contact_email_label">E-mail</string>
    <string name="contact_list_header">What would you like to add?</string>
    <string name="contact_photo_picker">How would you like\nto add a picture?</string>
    <string name="contact_photo_picker_or_tip">Or</string>
    <string name="add_number">Add number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="home_number">Home number</string>
    <string name="add_email">Add address</string>
    <string name="email_address">Email Address</string>
    <string name="delete_contact_dialog_body">Are you sure you want to delete %1$s from your contacts list?</string>
    <string name="action_button_delete_contact">Delete contact</string>
    <!-- Edit contact fields -->
    <string name="contact_edit_name">Edit name</string>
    <string name="contact_add_name">Add name</string>
    <string name="contact_edit_mobile_number">Edit mobile number</string>
    <string name="contact_add_mobile_number">Add mobile number</string>
    <string name="contact_edit_home_number">Edit home number</string>
    <string name="contact_add_home_number">Add home number</string>
    <string name="contact_edit_email">Edit email</string>
    <string name="contact_add_email">Add email</string>
    <string name="contact_edit_picture">Edit picture</string>
    <string name="contact_add_picture">Add picture</string>
    <string name="action_button_camera">Camera</string>
    <string name="action_button_gallery">Photos</string>
    <string name="contact_add_email_tip_body">For example:\ndan@example.com</string>
    <!-- Fonts from assets -->
    <string name="BebasNeue">fonts/BebasNeue.otf</string>
    <string name="Droidserif">fonts/DroidSerif.ttf</string>
    <string name="Droidserif_Bold">fonts/DroidSerif-Bold.ttf</string>
    <string name="Droidserif_BoldItalic">fonts/DroidSerif-BoldItalic.ttf</string>
    <string name="Droidserif_Italic">fonts/DroidSerif-Italic.ttf</string>
    <string name="HelveticaNeueLTCom_Lt">fonts/HelveticaNeueLTCom-Lt.ttf</string>
    <string name="HelveticaNeueLTCom_Roman">fonts/HelveticaNeueLTCom-Roman.ttf</string>
    <string name="HelveticaNeueLTCom_Th">fonts/HelveticaNeueLTCom-Th.ttf</string>
    <string name="LED">fonts/LED.otf</string>

    <!-- alerts/error messages -->
    <string name="no_phone_clients">There are no phone clients installed</string>
    <string name="no_email_clients">There are no email clients installed</string>
    <string name="no_sms_clients">There are no sms clients installed</string>

    <!-- Call History -->
    <string name="unknown">Unknown</string>
    <string name="you_didn_t_make_any_calls_">"You didn't make any calls "</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="earlier">Earlier</string>
    <string name="incoming_call">Incoming call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="missed_call">Missed call</string>
    <string name="create_new_contact">Create new contact</string>
    <plurals name="minutes_ago">
        <item quantity="one">One minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <string name="phone_number_template">Mobile Number (e.g. %1$s)</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_people">Favorite People</string>
    <string name="favorite_apps">Favorite Applications</string>
    <string name="favorite_links">Favorite Links</string>
    <string name="sos">SOS</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_text">You have not any reminder yet!</string>
    <string name="sos_text">Hold down the SOS button for 3 second to call</string>

    <!-- Photo Editor Strings -->
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="query_fav_app">Type to select favorite application</string>
    <string name="todo">TODO</string>

    <string name="helper">Helpers</string>
    <string name="secondaryHelper">Secondary Helper</string>
    <string name="primaryhelper">Primary Helper</string>

    <string name="tap_to_start_recording">Tap to start recording...</string>

    <string name="entering_geofence">Entering the GeoFence zone</string>
    <string name="exiting_geofence">Exiting the GeoFence zone</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="confirm">Approve</string>
    <string name="ignore">Reject</string>
    <string name="kids_helper">Kids Helper</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_choose_an_option">Please choose an option:</string>

    <string name="helper_invite">%s has invited you, please accept the invitation to help your Loved One.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="uploaded_photo">Upload photo</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="audio">Audio</string>
    <string name="enter_mobile_number">Please provide your registered mobile number!</string>
    <string name="enter_other_mobile_number">Another user registered with this mobile number, Please provide other mobile number!</string>
    <string name="home_title_safe_places">Safe places</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="wifi">Wifi</string>
    <string name="setting_flash_light">Flashlight</string>
    <string name="setting_bluetooth">Bluetooth</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="setting_battery">Battery</string>
    <string name="your_phone_has_been_put_to_sleep">Your phone has been put to sleep</string>
</resources>

