<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/app_install_confirmation_root"
    android:background="@color/white">
    <LinearLayout
        android:background="@color/home_slide_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/ivHelperIcon"
            android:src="@mipmap/helper_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/tv_confirmation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/please_choose_an_option"
            android:fontFamily="@font/helvetica_neue_roman"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirmation_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="Do you want to resend invitation to "
        android:fontFamily="@font/helvetica_neue_roman"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmation_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/home_slide_title_color"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neue_roman"
            />

        <Button
            android:id="@+id/confirmation_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/no"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/PrimaryColor"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neue_roman"
            android:textAllCaps="false"
          />



    </LinearLayout>

</LinearLayout>